added code for cv+auc

--- a/main.ipynb
+++ b/main.ipynb
@@ -93,7 +93,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## ------------\n",
+    "## Using cross validation + AUC instead of accuracy\n",
+    "## ------------\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=100,criterion=\"entropy\")   \n",
+    "cv = StratifiedKFold(n_splits=10)\n",
+    "tprs = []\n",
+    "aucs = []\n",
+    "mean_fpr = np.linspace(0, 1, 100)\n",
+    "\n",
+    "for train, test in cv.split(data_no_cl, class_labels):\n",
+    "    pred = rf.fit(data_no_cl.iloc[train], class_labels[train]).predict(data_no_cl.iloc[test])\n",
+    "    # Compute ROC curve and area the curve\n",
+    "    fpr, tpr, thresholds = roc_curve(class_labels[test], pred)\n",
+    "    tprs.append(interp(mean_fpr, fpr, tpr))\n",
+    "    tprs[-1][0] = 0.0\n",
+    "    roc_auc = auc(fpr, tpr)\n",
+    "    aucs.append(roc_auc)\n",
+    "        \n",
+    "mean_tpr = np.mean(tprs, axis=0)\n",
+    "mean_tpr[-1] = 1.0\n",
+    "mean_auc = auc(mean_fpr, mean_tpr)\n",
+    "print(method, raw_dataset,'meanAUC: ', mean_auc)"
+   ]
   },
   {
    "cell_type": "code",
