added index reset for class labels

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8289473684210527"
+       "0.7763157894736842"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,25 +90,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meanAUC:  0.8302207947253998\n"
+     ]
+    }
+   ],
    "source": [
     "## ------------\n",
     "## Using cross validation + AUC instead of accuracy\n",
     "## ------------\n",
     "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import roc_curve, auc\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
+    "\n",
     "rf = RandomForestClassifier(n_estimators=100,criterion=\"entropy\")   \n",
     "cv = StratifiedKFold(n_splits=10)\n",
+    "# holding true positives\n",
     "tprs = []\n",
+    "# holding auc scores\n",
     "aucs = []\n",
+    "# create ndarray with \n",
     "mean_fpr = np.linspace(0, 1, 100)\n",
     "\n",
+    "class_labels = data['target']\n",
+    "data_no_cl = data.drop('target', axis = 1)\n",
+    "class_labels = class_labels.reset_index(drop=True)\n",
+    "\n",
     "for train, test in cv.split(data_no_cl, class_labels):\n",
-    "    pred = rf.fit(data_no_cl.iloc[train], class_labels[train]).predict(data_no_cl.iloc[test])\n",
+    "    #print(class_labels[train].isnull().values.any())\n",
+    "    #print(\"-------\")\n",
+    "    trees = rf.fit(data_no_cl.iloc[train], class_labels[train])\n",
+    "    pred = trees.predict(data_no_cl.iloc[test])\n",
     "    # Compute ROC curve and area the curve\n",
     "    fpr, tpr, thresholds = roc_curve(class_labels[test], pred)\n",
-    "    tprs.append(interp(mean_fpr, fpr, tpr))\n",
+    "    tprs.append(np.interp(mean_fpr, fpr, tpr))\n",
     "    tprs[-1][0] = 0.0\n",
     "    roc_auc = auc(fpr, tpr)\n",
     "    aucs.append(roc_auc)\n",
@@ -116,8 +139,15 @@
     "mean_tpr = np.mean(tprs, axis=0)\n",
     "mean_tpr[-1] = 1.0\n",
     "mean_auc = auc(mean_fpr, mean_tpr)\n",
-    "print(method, raw_dataset,'meanAUC: ', mean_auc)"
+    "print('meanAUC: ', mean_auc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
