--- a/main.ipynb
+++ b/main.ipynb
@@ -2,34 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "age         0\n",
-       "sex         0\n",
-       "cp          0\n",
-       "trestbps    0\n",
-       "chol        0\n",
-       "fbs         0\n",
-       "restecg     0\n",
-       "thalach     0\n",
-       "exang       0\n",
-       "oldpeak     0\n",
-       "slope       0\n",
-       "ca          0\n",
-       "thal        0\n",
-       "target      0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Project description\n",
     "#\n",
@@ -38,43 +13,71 @@
     "# CRISP-DM?????\n",
     "# -------------------------\n",
     "\n",
-    "# Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "data = pd.read_csv('dataset.csv', sep = ',')\n",
-    "\n",
-    "# checking columns of dataset\n",
-    "list(data.columns)\n",
+    "data = pd.read_csv('dataset.csv', sep = ',')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# checking the first few rows to get a feel for the contents of the dataset \n",
-    "data.head()\n",
-    "data.describe()\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# checking distribution between positive and negative subjects in the dataset\n",
-    "data.target.value_counts()\n",
+    "data.target.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-0206787ce7b5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# no null cells for any feature\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "# checking for duplicate rows\n",
     "data.duplicated().value_counts()\n",
     "# one duplicate row found, drop it\n",
-    "data = data.drop_duplicates()\n",
+    "data = data.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# no null cells for any feature\n",
     "data.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7763157894736842"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier as rf\n",
@@ -90,17 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "meanAUC:  0.8302207947253998\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## ------------\n",
     "## Using cross validation + AUC instead of accuracy\n",
@@ -141,27 +136,6 @@
     "mean_auc = auc(mean_fpr, mean_tpr)\n",
     "print('meanAUC: ', mean_auc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
