--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -257,41 +257,48 @@
        "0.75"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## -------------------------------------------------\n",
+    "## Create model using random forest algorithm, evaluate using accuracy\n",
+    "## -------------------------------------------------\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier as rf\n",
     "\n",
-    "# Split the data into training and testing sets\n",
+    "# Split data into test (25%), train (75%) and corresponding labels\n",
     "x_train, x_test, y_train, y_test  = train_test_split(data.drop('target', 1), data['target'], test_size = 0.25)\n",
     "\n",
+    "# Forest of 50 trees\n",
     "model = rf(n_estimators=50)\n",
     "model = model.fit(x_train, y_train)\n",
+    "# Create predictions\n",
     "classes = model.predict(x_test)\n",
+    "# Calculate accuracy using above model\n",
     "(classes == y_test).sum()/y_test.size\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "meanAUC:  0.8297609870777205\n"
+      "0.8261980109358302\n"
      ]
     }
    ],
    "source": [
-    "## ------------\n",
+    "## -------------------------------------------------\n",
     "## Using cross validation + AUC instead of accuracy\n",
-    "## ------------\n",
+    "## -------------------------------------------------\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import roc_curve, auc\n",
@@ -307,13 +314,10 @@
     "# create ndarray with \n",
     "mean_fpr = np.linspace(0, 1, 100)\n",
     "\n",
-    "class_labels = data['target']\n",
+    "class_labels = data['target'].reset_index(drop=True)\n",
     "data_no_cl = data.drop('target', axis = 1)\n",
-    "class_labels = class_labels.reset_index(drop=True)\n",
     "\n",
     "for train, test in cv.split(data_no_cl, class_labels):\n",
-    "    #print(class_labels[train].isnull().values.any())\n",
-    "    #print(\"-------\")\n",
     "    trees = rf.fit(data_no_cl.iloc[train], class_labels[train])\n",
     "    pred = trees.predict(data_no_cl.iloc[test])\n",
     "    # Compute ROC curve and area the curve\n",
@@ -326,7 +330,7 @@
     "mean_tpr = np.mean(tprs, axis=0)\n",
     "mean_tpr[-1] = 1.0\n",
     "mean_auc = auc(mean_fpr, mean_tpr)\n",
-    "print('meanAUC: ', mean_auc)"
+    "print(mean_auc)"
    ]
   }
  ],
@@ -335,18 +339,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
   }
  },
  "nbformat": 4,
