fixed code formatting

--- a/main.ipynb
+++ b/main.ipynb
@@ -318,8 +318,8 @@
     "data_no_cl = data.drop('target', axis = 1)\n",
     "\n",
     "for train, test in cv.split(data_no_cl, class_labels):\n",
-    "    trees = rf.fit(data_no_cl.iloc[train], class_labels[train])\n",
-    "    pred = trees.predict(data_no_cl.iloc[test])\n",
+    "    model = rf.fit(data_no_cl.iloc[train], class_labels[train])\n",
+    "    pred = model.predict(data_no_cl.iloc[test])\n",
     "    # Compute ROC curve and area the curve\n",
     "    fpr, tpr, thresholds = roc_curve(class_labels[test], pred)\n",
     "    tprs.append(np.interp(mean_fpr, fpr, tpr))\n",
